Selected players design

--- a/index.html
+++ b/index.html
@@ -5,11 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- Google font start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
+    <!-- Google font end  -->
+
+    <!-- style link  -->
+    <link rel="stylesheet" href="style.css">
+
+    <title>SELECT your team</title>
 </head>
 
 <body>
+    <section class="header">
+        <article class="header-article">
+            <h1>Choose your players</h1>
+            <p>It's time. Pick your player and create your team to enter the tournament</p>
+            </p>
+        </article>
+    </section>
 
+
+    <section class="players">
+        <article class="players-body">
+            <div class="player-box">
+                <img src="assets/Lionel-Messi.jfif" alt="">
+                <h1>Lionel Messi</h1>
+                <button>SELECT</button>
+            </div>
+            <div class="player-box">
+                <img src="assets/Cristiano-Ronaldo.jpg" alt="">
+                <h1>Cristiano Ronaldo</h1>
+                <button>SELECT</button>
+            </div>
+            <div class="player-box">
+                <img src="assets/Neymar-Jr.jfif" alt="">
+                <h1>Neymar Jr</h1>
+                <button>SELECT</button>
+            </div>
+            <div class="player-box">
+                <img src="assets/Kylian-Mbappé.jpg" alt="">
+                <h1>Kylian Mbappé</h1>
+                <button>SELECT</button>
+            </div>
+            <div class="player-box">
+                <img src="assets/Luis-Suarez.jfif" alt="">
+                <h1>Luis Suarez</h1>
+                <button>SELECT</button>
+            </div>
+            <div class="player-box">
+                <img src="assets/Sergio-Ramos.jfif" alt="">
+                <h1>Sergio Ramos</h1>
+                <button>SELECT</button>
+            </div>
+        </article>
+
+        <nav id="selected-players">
+            <h2>Selected Players/h2>
+        </nav>
+
+    </section>
 </body>
 
 </html>
