player section done

--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
                 <button>SELECT</button>
             </div>
         </article>
+        <div id="selected-players-section">
+            <nav id="selected-players">
+                <h2>Selected Players</h2>
+            </nav>
+            <nav id="budget">
+                <h2>Budget</h2>
+            </nav>
+        </div>
 
-        <nav id="selected-players">
-            <h2>Selected Players/h2>
-        </nav>
 
     </section>
 </body>
