budget design done

--- a/index.html
+++ b/index.html
@@ -88,6 +88,38 @@
             </nav>
             <nav id="budget">
                 <h2>Budget</h2>
+                <section id="playerCost">
+                    <p>Per player</p>
+                    <input type="number">
+                </section>
+
+                <button id="playerCostButton">Calculate</button>
+
+                <section>
+                    <div id="playerExpenses">
+                        <p>Player Expenses</p>
+                        <p>$ <span>0</span></p>
+                    </div>
+
+                    <div id="manager">
+                        <p>Manager</p>
+                        <input type="number">
+                    </div>
+
+                    <div id="coach">
+                        <p>Coach</p>
+                        <input type="number">
+                    </div>
+
+                    <button id="totalCostButton">Calculate Total</button>
+
+                    <div id="calculation">
+                        <p>Total cost</p>
+                        <p>$ <span>0</span></p>
+                    </div>
+
+                </section>
+
             </nav>
         </div>
     </section>
