--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h2>Budget</h2>
                 <section id="playerCost">
                     <p>Per player</p>
-                    <input type="number">
+                    <input type="number" id="playerCostField">
                 </section>
 
                 <button id="playerCostButton">Calculate</button>
@@ -98,24 +98,24 @@
                 <section>
                     <div id="playerExpenses">
                         <p>Player Expenses</p>
-                        <p>$ <span>0</span></p>
+                        <p>$ <span id="playerCostValue">0</span></p>
                     </div>
 
                     <div id="manager">
                         <p>Manager</p>
-                        <input type="number">
+                        <input type="number" id="managerCostField">
                     </div>
 
                     <div id="coach">
                         <p>Coach</p>
-                        <input type="number">
+                        <input type="number" id="coachCostField">
                     </div>
 
                     <button id="totalCostButton">Calculate Total</button>
 
                     <div id="calculation">
                         <p>Total cost</p>
-                        <p>$ <span>0</span></p>
+                        <p>$ <span id="finalCost">0</span></p>
                     </div>
 
                 </section>
