Total cost color fixed

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                     <div id="calculation">
                         <p>Total cost</p>
-                        <p>$ <span id="finalCost">0</span></p>
+                        <p id="finalCal">$ <span id="finalCost">0</span></p>
                     </div>
 
                 </section>
